hphp/test/slow/coeffects/memo-error-2.php.expectf
Fatal error: This function can only be memoized using __Memoize(#KeyedByIC) or __MemoizeLSB(#KeyedByIC) because it has zoned context in %s on line 3
